--- a/style.css
+++ b/style.css
@@ -1,3 +1,84 @@
+body {
+  color: #3c353f;
+  background-color: #f7f7f7;
+  font-family: "Open Sans", Helvetica, Arial, Verdana, sans-serif;
+  margin: 0;
+  padding: 0; }
+  body * {
+    box-sizing: border-box;
+    outline: none; }
 
+header {
+  padding: 1em 10% 2em 10%;
+  height: 100vh;
+  background: linear-gradient(0.5turn, #3c353f, #00a650, #00a650);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #f7f7f7; }
+  header h1 {
+    font-size: 3em;
+    font-family: "Roboto Slab", Helvetica, Arial, Verdana, sans-serif; }
+  header h2 {
+    font-size: 1em;
+    font-weight: 600; }
+
+main #chart {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1.61fr 1fr;
+  padding: 1em 2em 1em 2em; }
+  main #chart h3 {
+    grid-column: 1 / -1;
+    padding: 1em 0 1em 0; }
+  main #chart nav {
+    grid-column: 1 / -1;
+    padding: 0;
+    margin: 0; }
+    main #chart nav ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      main #chart nav ul li {
+        padding: 0 0 1em 0; }
+        main #chart nav ul li button {
+          width: 100%;
+          text-align: start;
+          border-radius: 0;
+          line-height: 1.5;
+          border: none;
+          background-color: #dedede;
+          padding: 0.5em 0.5em 0.5em 0.5em; }
+        main #chart nav ul li button.active {
+          background-color: #b7b7b7;
+          font-weight: 600; }
+  main #chart figure {
+    padding: 0;
+    margin: 0; }
+    main #chart figure svg {
+      margin: 0;
+      padding: 0;
+      overflow: visible; }
+      main #chart figure svg path {
+        stroke: #f7f7f7;
+        stroke-opacity: 0.25; }
+      main #chart figure svg .x_axis .tick text {
+        font-size: 0.85rem; }
+      main #chart figure svg .y_axis .tick text {
+        font-size: 0.7rem; }
+  main #chart #explanation {
+    padding: 0;
+    margin: 0; }
+    main #chart #explanation ul {
+      list-style-type: none; }
+      main #chart #explanation ul i {
+        font-size: 0.5em;
+        color: #00a650; }
+      main #chart #explanation ul li.subsection {
+        font-weight: 600;
+        margin-top: 1em; }
 
 /*# sourceMappingURL=style.css.map */
