--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
 header {
   padding: 1em 10% 2em 10%;
   height: 100vh;
-  background: linear-gradient(0.5turn, $fontcol, $green, $green);
+  background: linear-gradient(0.5turn, $green, $green, $green);
   display: flex;
   flex-direction: column;
   justify-content: center;
