--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ main #chart {
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1.61fr 1fr;
+  grid-template-rows: auto auto 1fr;
   padding: 1em 2em 1em 2em; }
   main #chart h3 {
     grid-column: 1 / -1;
@@ -34,7 +35,7 @@ main #chart {
   main #chart nav {
     grid-column: 1 / -1;
     padding: 0;
-    margin: 0;
+    margin: 0 0 1em 0;
     display: flex;
     justify-content: space-between;
     align-items: center; }
@@ -50,7 +51,10 @@ main #chart {
       font-weight: 600; }
   main #chart figure {
     padding: 0;
-    margin: 0; }
+    margin: 0;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr; }
     main #chart figure svg {
       margin: 0;
       padding: 0;
