--- a/style.scss
+++ b/style.scss
@@ -43,6 +43,7 @@ main {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 1.61fr 1fr;
+    grid-template-rows: auto auto 1fr;
     padding: 1em 2em 1em 2em;
 
     h3 {
@@ -53,7 +54,7 @@ main {
     nav {
       grid-column: 1 / -1;
       padding: 0;
-      margin: 0;
+      margin: 0 0 1em 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -76,6 +77,9 @@ main {
     figure {
       padding: 0;
       margin: 0;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: 1fr;
 
       svg {
         margin: 0;
