--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ header {
     font-size: 1em;
     font-weight: 600; }
 
+svg text {
+  font-family: "Open Sans", Helvetica, Arial, Verdana, sans-serif; }
+
 main .data_caption {
   font-style: italic;
   color: #929292;
@@ -32,84 +35,102 @@ main .data_caption {
   padding-left: 1em; }
   main .data_caption a {
     color: inherit; }
-main #areas {
+main #consumption {
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr;
   padding: 0;
   margin: 0; }
-  main #areas .h3 {
+  main #consumption .h3 {
     padding: 2rem 0 2rem 0; }
-    main #areas .h3 div {
+    main #consumption .h3 div {
       display: flex;
       justify-content: space-between; }
-      main #areas .h3 div span:first-of-type {
+      main #consumption .h3 div span:first-of-type {
         color: #464646; }
-      main #areas .h3 div span:last-of-type {
+      main #consumption .h3 div span:last-of-type {
         color: #f7f7f7; }
-  main #areas figure {
+  main #consumption figure {
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr auto auto;
     grid-template-columns: 1fr;
     height: 100vh;
     position: sticky;
     top: 0;
     overflow: hidden; }
-    main #areas figure .h3 {
+    main #consumption figure .h3 {
       padding-left: 10%;
       padding-right: 10%; }
-    main #areas figure .smline {
-      stroke-width: 2px; }
-    main #areas figure svg#trans {
-      padding: 0;
-      margin: 0;
-      z-index: 1;
-      background-color: #f7f7f7; }
-      main #areas figure svg#trans text {
-        fill: #2c2c2c; }
-      main #areas figure svg#trans line, main #areas figure svg#trans path.domain {
-        stroke: rgba(44, 44, 44, 0.75); }
-    main #areas figure svg#dragme {
-      position: absolute;
-      margin: 0;
-      padding: 0;
-      z-index: 2;
-      background: transparent;
-      pointer-events: none;
-      overflow: visible; }
-      main #areas figure svg#dragme line {
-        stroke: #6c6c6c; }
-    main #areas figure svg#dirt {
-      z-index: -1;
-      position: absolute;
-      background-color: #464646; }
-      main #areas figure svg#dirt text {
-        fill: #f7f7f7;
-        font-family: "Open Sans", Helvetica, Arial, Verdana, sans-serif;
-        min-height: 80vh; }
-      main #areas figure svg#dirt .tick line, main #areas figure svg#dirt .tick path, main #areas figure svg#dirt line, main #areas figure svg#dirt path.domain {
-        stroke: rgba(247, 247, 247, 0.75); }
-  main #areas article#explanation {
+    main #consumption figure #bars {
+      margin: 0 0 2em 0;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 2em;
+      padding-left: 10%;
+      padding-right: 10%; }
+      main #consumption figure #bars svg {
+        overflow: visible; }
+      main #consumption figure #bars .e-source {
+        margin: 0 0 1em 0; }
+      main #consumption figure #bars p {
+        margin: 0;
+        font-size: 0.85em; }
+      main #consumption figure #bars [data-vde="vde"] span.ktne {
+        color: #00a650; }
+      main #consumption figure #bars [data-vde="vde"] rect {
+        fill: #00a650; }
+      main #consumption figure #bars [data-vde="vde"] circle {
+        fill: #00a650;
+        stroke: #00a650;
+        stroke-width: 2; }
+      main #consumption figure #bars [data-vde="dirt"] span.ktne {
+        color: #f26522; }
+      main #consumption figure #bars [data-vde="dirt"] rect {
+        fill: #f26522; }
+      main #consumption figure #bars [data-vde="dirt"] circle {
+        fill: #f26522;
+        stroke: #f26522;
+        stroke-width: 2; }
+    main #consumption figure #lines {
+      margin: 0 0 2em 0;
+      padding-left: 10%;
+      padding-right: 10%; }
+      main #consumption figure #lines svg {
+        overflow: visible; }
+      main #consumption figure #lines path.sl {
+        stroke-width: 3;
+        stroke-opacity: 0.75; }
+      main #consumption figure #lines #year_dragger {
+        cursor: move; }
+        main #consumption figure #lines #year_dragger line {
+          stroke-width: 2;
+          stroke: #797979; }
+      main #consumption figure #lines #x_axis text {
+        transition: all 0.5s; }
+        main #consumption figure #lines #x_axis text.active {
+          font-weight: 600;
+          font-size: 1.25rem; }
+  main #consumption article#explanation {
     padding: 1em;
     margin: 0;
     grid-column: 2 / -1;
     background-color: #eaeaea; }
-    main #areas article#explanation h4 {
+    main #consumption article#explanation h4 {
       padding: 2rem 0 1em 0; }
-    main #areas article#explanation .text {
+    main #consumption article#explanation .text {
       padding: 1em 0 2em 0;
       min-height: 80vh; }
-    main #areas article#explanation ul {
+    main #consumption article#explanation ul {
       list-style-type: none; }
-      main #areas article#explanation ul i {
+      main #consumption article#explanation ul i {
         font-size: 0.5em;
         color: #00a650; }
-      main #areas article#explanation ul li {
+      main #consumption article#explanation ul li {
         margin: 0 0 1em 1em; }
-      main #areas article#explanation ul li.subsection {
+      main #consumption article#explanation ul li.subsection {
         font-weight: 600;
         margin: 2em 0 1em 0; }
 main #costs {
