--- a/style.css
+++ b/style.css
@@ -44,13 +44,12 @@ main #consumption {
   margin: 0; }
   main #consumption .h3 {
     padding: 2rem 0 2rem 0; }
+    @media screen and (max-height: 850px) {
+      main #consumption .h3 {
+        padding: 0.5rem 0 1rem 0; } }
     main #consumption .h3 div {
       display: flex;
       justify-content: space-between; }
-      main #consumption .h3 div span:first-of-type {
-        color: #464646; }
-      main #consumption .h3 div span:last-of-type {
-        color: #f7f7f7; }
   main #consumption figure {
     padding: 0;
     margin: 0;
@@ -61,9 +60,16 @@ main #consumption {
     position: sticky;
     top: 0;
     overflow: hidden; }
+    @media screen and (max-height: 850px) {
+      main #consumption figure {
+        grid-template-rows: auto 1fr auto;
+        grid-template-columns: 1fr minmax(auto, 200px); } }
     main #consumption figure .h3 {
       padding-left: 10%;
       padding-right: 10%; }
+      @media screen and (max-height: 850px) {
+        main #consumption figure .h3 {
+          grid-column: 1 / -1; } }
     main #consumption figure #bars {
       margin: 0 0 2em 0;
       display: grid;
@@ -77,7 +83,8 @@ main #consumption {
         margin: 0 0 1em 0; }
       main #consumption figure #bars p {
         margin: 0;
-        font-size: 0.85em; }
+        font-size: 0.75em;
+        line-height: 1; }
       main #consumption figure #bars [data-vde="vde"] span.ktne {
         color: #00a650; }
       main #consumption figure #bars [data-vde="vde"] rect {
@@ -94,10 +101,25 @@ main #consumption {
         fill: #f26522;
         stroke: #f26522;
         stroke-width: 2; }
+      main #consumption figure #bars span.ktne {
+        white-space: nowrap; }
+      @media screen and (max-height: 850px) {
+        main #consumption figure #bars {
+          grid-template-columns: 1fr;
+          grid-column: 2 / 3;
+          grid-gap: 0; }
+          main #consumption figure #bars span.ktne {
+            display: none; } }
     main #consumption figure #lines {
       margin: 0 0 2em 0;
       padding-left: 10%;
       padding-right: 10%; }
+      @media screen and (max-height: 850px) {
+        main #consumption figure #lines {
+          grid-column: 1 / 2;
+          grid-row: 2 / 3;
+          padding-left: 2em;
+          padding-right: 2em; } }
       main #consumption figure #lines svg {
         overflow: visible; }
       main #consumption figure #lines path.sl {
@@ -116,6 +138,10 @@ main #consumption {
           font-size: 1.25rem; }
       main #consumption figure #lines circle {
         cursor: pointer; }
+  @media screen and (max-height: 850px) {
+    main #consumption .data_caption {
+      grid-column: 1 / -1;
+      grid-row: 3 / 4; } }
   main #consumption article#explanation {
     padding: 1em;
     margin: 0;
@@ -165,5 +191,22 @@ main #costs {
       font-size: 0.85em;
       margin: 0;
       padding: 1em 0 1em 0; }
+
+span.vde {
+  color: #00a650; }
+
+span.dirt {
+  color: #f26522; }
+
+.tippy-popper div.tippy-tooltip {
+  color: #2c2c2c;
+  font-size: 1rem;
+  padding: 0.75em !important;
+  box-shadow: 0 0 0.5em 1px #dedede; }
+.tippy-popper .tippy-backdrop {
+  background-color: rgba(247, 247, 247, 0.75); }
+.tippy-popper p {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0; }
 
 /*# sourceMappingURL=style.css.map */
