--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,7 @@ main {
         
         p {
           margin: 0;
-          font-size: 0.75em;
+          font-size: 0.85em;
           line-height: 1;
         }
 
@@ -172,6 +172,10 @@ main {
           grid-template-columns: 1fr;
           grid-column: 2 / 3;
           grid-gap: 0;
+
+          p {
+            font-size: 0.75rem;
+          }
 
           span.ktne {
             display: none;
