--- a/style.scss
+++ b/style.scss
@@ -63,255 +63,301 @@ main {
       //text-decoration-color: $red;
     }
   }
+}
 
-  #consumption {
-    min-height: 100vh;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-    padding: 0;
-    margin: 0;
+#consumption {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  padding: 0;
+  margin: 0;
 
-    .h3 {
-      padding: 2rem 0 2rem 0;
+  .h3 {
+    padding: 2rem 0 2rem 0;
 
-      @media #{$max_height_medium} {
-        padding: 0.5rem 0 1rem 0;
-      }
-
-      div {
-        display: flex;
-        justify-content: space-between;
-      }
+    @media #{$max_height_medium} {
+      padding: 0.5rem 0 1rem 0;
     }
 
-    figure {
-      padding: 0;
-      margin: 0;
-      display: grid;
-      grid-template-rows: auto 1fr auto auto;
-      grid-template-columns: 1fr;
-      height: 100vh;
-      position: sticky;
-      top: 0;
-      overflow: hidden;
-
-      @media #{$max_height_medium} {
-        grid-template-rows: auto 1fr auto;
-        grid-template-columns: 1fr minmax(auto, 200px);
-      }
-
-      .h3 {
-        padding-left: 10%;
-        padding-right: 10%;
-
-        @media #{$max_height_medium} {
-          grid-column: 1 / -1;
-        }
-      }
-
-      #bars {
-        margin: 0 0 2em 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 2em;
-        padding-left: 10%;
-        padding-right: 10%;
-
-        svg {
-          overflow: visible;
-        }
-
-        .e-source {
-          margin: 0 0 1em 0;
-        }
-        
-        p {
-          margin: 0;
-          font-size: 0.85em;
-          line-height: 1;
-        }
-
-        [data-vde="vde"] {
-          span.ktne {
-            color: $green;
-          }
-
-          rect {
-            fill: $green;
-          }
-
-          circle {
-            fill: $green;
-            stroke: $green;
-            stroke-width: 2;
-          }
-        }
-
-        [data-vde="dirt"] {
-          span.ktne {
-            color: $red;
-          }
-
-          rect {
-            fill: $red;
-          }
-
-          circle {
-            fill: $red;
-            stroke: $red;
-            stroke-width: 2;
-          }
-        }
-
-        span.ktne {
-          white-space: nowrap;
-        }
-
-        @media #{$max_height_medium} {
-          grid-template-columns: 1fr;
-          grid-column: 2 / 3;
-          grid-gap: 0;
-
-          p {
-            font-size: 0.75rem;
-          }
-
-          span.ktne {
-            display: none;
-          }
-        }
-
-      }
-
-      #lines {
-        margin: 0 0 2em 0;
-        padding-left: 10%;
-        padding-right: 10%;
-
-        @media #{$max_height_medium} {
-          grid-column: 1 / 2;
-          grid-row: 2 / 3;
-          padding-left: 2em;
-          padding-right: 2em;
-        }
-
-        svg {
-          overflow: visible;
-        }
-
-        path.sl {
-          stroke-width: 3;
-          stroke-opacity: 0.75;
-        }
-
-        #year_dragger {
-          cursor: move;
-
-          line {
-            stroke-width: 2;
-            stroke: lighten($fontcol, 30%);
-          }
-        }
-
-        #x_axis text {
-          cursor: pointer;
-          transition: all 0.5s;
-
-          &.active {
-            font-weight: 600;
-            font-size: 1.25rem;
-          }
-        }
-
-        circle {
-          cursor: pointer;
-        }
-      }
-    }
-
-    .data_caption {
-      @media #{$max_height_medium} {
-        grid-column: 1 / -1;
-        grid-row: 3 / 4;
-      }
-    }
-
-    article#explanation {
-      padding: 1em;
-      margin: 0;
-      grid-column: 2 / -1;
-      background-color: darken($bgcol, 5%);
-
-      h4 {
-        padding: 2rem 0 1em 0;
-      }
-
-      .text {
-        padding: 1em 0 2em 0;
-        min-height: 80vh;
-      }
-
-      ul {
-        list-style-type: none;
-
-        i {
-          font-size: 0.5em;
-          color: $green;
-        }
-
-        li {
-          margin: 0 0 1em 1em;
-        }
-
-        li.subsection {
-          font-weight: 600;
-          margin: 2em 0 1em 0;
-        }
-      }
+    div {
+      display: flex;
+      justify-content: space-between;
     }
   }
 
-  #costs {
-    min-height: 100vh;
+  figure {
+    padding: 0;
+    margin: 0;
     display: grid;
+    grid-template-rows: auto 1fr auto auto;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr auto;
-    padding: 1em 2em 1em 2em;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
 
-    h3 {
-      grid-column: 1 / -1;
-      padding: 1em 0 1em 0;
+    @media #{$max_height_medium} {
+      grid-template-rows: auto 1fr auto;
+      grid-template-columns: 1fr minmax(auto, 200px);
     }
 
-    figure {
-      display: grid;
-      padding: 0;
-      margin: 0;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-gap: 1.5em;
+    .h3 {
+      padding-left: 10%;
+      padding-right: 10%;
 
-      .byType {
-        display: flex;
-        align-items: end;
-        flex-wrap: wrap;
+      @media #{$max_height_medium} {
+        grid-column: 1 / -1;
+      }
+    }
+
+    #bars {
+      margin: 0 0 2em 0;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 2em;
+      padding-left: 10%;
+      padding-right: 10%;
+
+      svg {
+        overflow: visible;
+      }
+
+      .e-source {
+        margin: 0 0 1em 0;
+      }
+
+      p {
+        margin: 0;
+        font-size: 0.85em;
+        line-height: 1;
+      }
+
+      [data-vde="vde"] {
+        span.ktne {
+          color: $green;
+        }
+
+        rect {
+          fill: $green;
+        }
+
+        circle {
+          fill: $green;
+          stroke: $green;
+          stroke-width: 2;
+        }
+      }
+
+      [data-vde="dirt"] {
+        span.ktne {
+          color: $red;
+        }
+
+        rect {
+          fill: $red;
+        }
+
+        circle {
+          fill: $red;
+          stroke: $red;
+          stroke-width: 2;
+        }
+      }
+
+      span.ktne {
+        white-space: nowrap;
+      }
+
+      @media #{$max_height_medium} {
+        grid-template-columns: 1fr;
+        grid-column: 2 / 3;
+        grid-gap: 0;
+
+        p {
+          font-size: 0.75rem;
+        }
+
+        span.ktne {
+          display: none;
+        }
+      }
+
+    }
+
+    #lines {
+      margin: 0 0 2em 0;
+      padding-left: 10%;
+      padding-right: 10%;
+
+      @media #{$max_height_medium} {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        padding-left: 2em;
+        padding-right: 2em;
       }
 
       svg {
         overflow: visible;
+      }
 
-        path.line {
-          stroke-width: 2px;
-          stroke-opacity: 0.75;
+      path.sl {
+        stroke-width: 3;
+        stroke-opacity: 0.75;
+      }
+
+      #year_dragger {
+        cursor: move;
+
+        line {
+          stroke-width: 2;
+          stroke: lighten($fontcol, 30%);
         }
       }
 
-      p {
-        font-size: 0.85em;
-        margin: 0;
-        padding: 1em 0 1em 0;
+      #x_axis text {
+        cursor: pointer;
+        transition: all 0.5s;
+
+        &.active {
+          font-weight: 600;
+          font-size: 1.25rem;
+        }
       }
+
+      circle {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .data_caption {
+    @media #{$max_height_medium} {
+      grid-column: 1 / -1;
+      grid-row: 3 / 4;
+    }
+  }
+
+  article#explanation {
+    padding: 1em;
+    margin: 0;
+    grid-column: 2 / -1;
+    background-color: darken($bgcol, 5%);
+
+    h4 {
+      padding: 2rem 0 1em 0;
+    }
+
+    .text {
+      padding: 1em 0 2em 0;
+      min-height: 80vh;
+    }
+
+    ul {
+      list-style-type: none;
+
+      i {
+        font-size: 0.5em;
+        color: $green;
+      }
+
+      li {
+        margin: 0 0 1em 1em;
+      }
+
+      li.subsection {
+        font-weight: 600;
+        margin: 2em 0 1em 0;
+      }
+    }
+  }
+}
+
+#costs {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto 1fr auto;
+  padding: 1em 2em 1em 2em;
+
+  h3 {
+    grid-column: 1 / -1;
+    padding: 1em 0 1em 0;
+  }
+
+  figure {
+    display: grid;
+    padding: 0;
+    margin: 0;
+    grid-template-columns: 1fr 20em 1fr;
+    grid-template-rows: auto 1fr;
+    grid-gap: 2em;
+
+    h5 {
+      &:first-of-type {
+        grid-column: 1 / 2;
+      }
+
+      &:last-of-type {
+        grid-column: 3 / 4;
+      }
+    }
+
+    #costs-legend {
+      grid-column: 2 / 3;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      svg {
+        display: inline;
+        margin: 0 1em 0 0;
+      }
+
+      p.legend {
+        margin: 0 1em 0 1em;
+        padding: 0;
+      }
+
+    }
+
+    .byType#base-scen {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+
+    .byType#rev-scen {
+      grid-column: 3 / 4;
+      grid-row: 2 / 3;
+    }
+
+    .byType {
+
+      svg {
+        overflow: visible;
+
+        .slope line {
+          stroke-width: 3;
+        }
+
+        #cost_ax_x {
+          text {
+            font-family: $fontfam;
+            font-size: 1rem;
+          }
+
+          line {
+            stroke: lighten($fontcol, 50%);
+          }
+        }
+      }
+
+    }
+
+    p {
+      font-size: 0.85em;
+      margin: 0;
+      padding: 1em 0 1em 0;
     }
   }
 }
@@ -343,3 +389,4 @@ span.dirt {
   }
 
 }
+
