--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,12 @@ main {
   h3 {
     grid-column: 1 / -1;
     padding: 1em 0 1em 0;
+    margin: 1em 0 1em 0;
+  }
+
+  p {
+    padding: 0;
+    margin: 0 0 1em 0;
   }
 
   figure {
@@ -295,6 +301,7 @@ main {
 
     .h5 {
       margin: 1em 0 0 1em;
+      font-size: 1em;
 
       &.dirt {
         grid-column: 1 / 2;
